Bug 507714 - Qt5 macOS: Text Properties docker rendering broken
Summary: Qt5 macOS: Text Properties docker rendering broken
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Other macOS
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-07-31 21:00 UTC by Freya Lupen
Modified: 2025-08-05 17:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
surface preview on M1 arm (318.30 KB, image/jpeg)
2025-08-05 00:37 UTC, vanyossi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Freya Lupen 2025-07-31 21:00:01 UTC
On Krita 5.3.0-prealpha on macOS, the Text Properties docker shows a flipped and red-blue swapped version of the Krita window. It's still possible to interact with its widgets such as the font size spinbox, but they are not visible. A warning is logged:
> qt.qpa.openglcontext: Could not create NSOpenGLContext with shared context, falling back to unshared context.
This is a regression of commit 54cc96ef, which changed the surface format of the widget, which breaks the OpenGL context sharing.
This issue doesn't happen on Qt6 builds, and seems to be macOS-specific.

Version: Krita 5.3.0-prealpha-8d08b0bed
Comment 1 Bug Janitor Service 2025-08-05 00:36:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2438
Comment 2 vanyossi 2025-08-05 00:37:39 UTC
Created attachment 183794 [details]
surface preview on M1 arm

on M1 the surface get completely broken. a made a quick MR to fix it until we have a proper fix.
Comment 3 vanyossi 2025-08-05 17:35:29 UTC
Git commit 18f10ffe3f39ade1f6969737192865eebf7eb186 by Ivan Yossi.
Committed on 05/08/2025 at 17:31.
Pushed by ivany into branch 'master'.

Don't add surface format on macOS Qt5

M  +2    -0    plugins/dockers/textproperties/TextPropertiesDock.cpp

https://invent.kde.org/graphics/krita/-/commit/18f10ffe3f39ade1f6969737192865eebf7eb186