Don't add surface format on macOS Qt5

BUG: 507714